# crowdvibe-api

./: .bumpversion.cfg  .coveragerc  .env.exemple  .flake8  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/: pull_request_template.rst
.github/workflows/: ci.yml  version-bump-and-package.yml
docs/: AUTHORS.rst  conf.py  how_to_use_the_template.rst  installation.rst  the_rationale_behind.rst  usage.rst
docs/nonlisted/: badges.rst  ci_platforms.rst  project_layout.rst  readthedocs.rst
docs/reference/: libs.rst  main.rst
src/crowdvibe/: __init__.py  __main__.py  app.py  cli_int1.py
src/crowdvibe/configs/: config.py
src/crowdvibe/configs/database/: database_connection.py  mssql_connection.py  postgres_connection.py
src/crowdvibe/routes/: home.py  router.py  users.py
tests/: __init__.py  test_1.py  test_cli.py
