[tool.poetry]
name = "crowdvibe"
version = "0.1.0"
description = "CrowdVibe API"
authors = ["Jeremy Maret <jeremy.maret@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/jere-t/crowdvice-api"
repository = "https://github.com/jere-t/crowdvice-api"
keywords = ["crowdvice"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
uvicorn = "^0.28.0"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
pyodbc = "^5.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.5.0"
isort = "^5.13.2"
pytest = "^8.1.1"
nox = "^2024.3.2"
codecov = "^2.1.13"
coverage = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
cv = "crowdvibe.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
